--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
 	margin-top: 10%;
 	margin-left: 5%;
 }
-
 </style>
 <body>
 <div class="container main_body">
-	<h3>Flare Prediction<sup> (Enter a link to Reddit post (preferably r/india) to predict a flare for it)</sup></h3>
+	<h3>Flare Prediction</h3>
+	<p>[ Enter a link to Reddit post (preferably r/india) to predict a flare for it ]</p>
 	<div>
 	  <form action="/index" method="POST">
 	  	 <label>Enter Reddit Link</label>
