New Model added

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@ img{
 <body>
 <div class="jumbotron text-center">
 	<h1><img src="https://github.com/YatinGupta777/Reddit-Flare-Detector-Web-App/blob/master/templates/reddit.png?raw=true">Reddit Flair Detector</h1>
-	<p>[ Enter a link to Reddit post (preferably r/india) to predict a flare for it ]</p>
+	<p>[ Enter a link to a Reddit post (preferably r/india) to predict a flare for it ]</p>
 	<div>
 	  <form action="/index" method="POST">
 	  	 <label>Enter Link to a Reddit Post</label>
