--- a/templates/index.html
+++ b/templates/index.html
@@ -10,18 +10,14 @@
 <style type="text/css">
 
 body{
-	background-size:     cover;                      
-    background-repeat:   no-repeat;
-    background-position: center center;  
     color: white;
     background-color: black;
 }
 .jumbotron{
 	background-color: #000000;
-	margin-top: 10%;
 }
 #prediction{
-	font-size: 200%;
+	font-size: 150%;
 }
 img{
 	height: 70px;
@@ -42,11 +38,15 @@ img{
 	  </form>
 	  <br>
 	  Predicted Flare : <mark id="prediction">{{prediction}}</mark>
+	  <br>
+	  <br>
+	<p>Available flares : <mark>Politics</mark>, <mark>Non-Political</mark>, <mark>AskIndia</mark>, <mark>Business/Finance</mark>, <mark>Science/Technology</mark>, <mark>Policy/Economy</mark>, <mark>Coronavirus</mark>, <mark>[R]eddiquette</mark>, <mark>Photography</mark>, <mark>Sports</mark>, <mark>Not in English</mark></p>  
+	<p>Analyzed over 400,000+ Reddit Posts</p>
 	</div>
-
+More Details about the model : <a href="https://github.com/YatinGupta777/Reddit-flare-detector">Here</a>
 </div>
 <div class="container-fluid bg-grey">
-  <h5 align="right">Developed by <a href="https://github.com/YatinGupta777">Yatin Gupta</a></h5>
+  <h5 align="right">Developed by <a href="http://yatingupta.engineer/">Yatin Gupta</a></h5>
 </div>
 
 </body>
