--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@ img{
 
 	  <br>
 	<p id="flares">Available flares : <mark>Politics</mark>, <mark>Non-Political</mark>, <mark>AskIndia</mark>, <mark>Business/Finance</mark>, <mark>Science/Technology</mark>, <mark>Policy/Economy</mark>, <mark>Coronavirus</mark>, <mark>[R]eddiquette</mark>, <mark>Photography</mark>, <mark>Sports</mark>, <mark>Not in English</mark></p>  
-	<p>Analyzed over 400,000+ Reddit Posts</p>
+	<p>Analyzed over 400,000+ r/india Posts</p>
 	</div>
 More Details about the model : <a href="https://github.com/YatinGupta777/Reddit-flare-detector">Here</a>
 </div>
