Error control in endpoint

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Flare Predictor</title>
+    <title>Reddit Flare Detector</title>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <style type="text/css">
@@ -35,7 +35,7 @@ img{
 <body>
 <div class="jumbotron text-center">
 	<h1><img src="https://github.com/YatinGupta777/Reddit-Flare-Detector-Web-App/blob/master/templates/reddit.png?raw=true">Reddit Flair Detector</h1>
-	<p>[ Enter a link to a Reddit post (preferably r/india) to predict a flare for it ]</p>
+	<p>[ Enter a link to a Reddit post (preferably r/india) to detect a flare for it ]</p>
 	<div>
 	  <form action="/index" method="POST">
 	  	 <label>Enter Link to a Reddit Post</label>
