--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@ img{
 </style>
 <body>
 <div class="jumbotron text-center">
-	<h1><img src="https://github.com/YatinGupta777/Reddit-Flare-Detector-Web-App/blob/master/templates/reddit.png?raw=true">Reddit Flair Detector</h1>
+	<h1><img src="https://github.com/YatinGupta777/Reddit-Flare-Detector-Web-App/blob/master/templates/reddit.png?raw=true">Reddit Flare Detector</h1>
 	<p>[ Enter a link to a Reddit post (preferably r/india) to detect a flare for it ]</p>
 	<div>
 	  <form action="/index" method="POST">
